--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My Portfolio</title>
+        <meta charset="UTF-8" />
+    </head>
+    <body>
+        <p>Test</p>
+    </body>
+</html>
