--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <meta charset="UTF-8" />
     </head>
     <body>
-        <p>Test - Test Commit</p>
+        <p>Test</p>
     </body>
 </html>
