--- a/Lemuel.html
+++ b/Lemuel.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemuel_Resume</title>
-</head>
-
+    <link href="css/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="assests/img/deep.jpeg"/>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -24,6 +24,27 @@
             </ul>
         </div>
     </nav>
+    <div class="container-fluid p-0">
+        <!-- About-->
+        <section class="resume-section" id="about">
+            <div class="resume-section-content">
+                <h1 class="mb-0">
+                    Lemuel
+                    <span class="text-danger">Genova</span>
+                </h1>
+                <h6 class="text-danger">Remyeru</h6>
+                <div class="subheading mb-5">
+                    2510 Aurora Street Barangay 124, Pasay · (+63)9512889217 ·
+                    <a href="mailto:lemuelr.72@gmail.com">Lemuelr.72@gmail.com</a>
+                </div>
+                <p class="lead mb-5">Novice in the line of Web Developing but have knowldge, Competence with handling customer since the line of work is handling customer.</p>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://www.linkedin.com/in/lemuel-genova-06ab41233/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://github.com/remyeru"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/lemuel.genova/"><i class="fab fa-facebook-f"></i></a>
+                </div>
+            </div>
+        </section>
     
 </body>
 </html>
