--- a/Lemuel.html
+++ b/Lemuel.html
@@ -7,6 +7,7 @@
     <title>Lemuel_Resume</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="assests/img/deep.jpeg"/>
+</head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -47,7 +48,7 @@
         </section>
         <section>
             <div>
-                
+
             </div>
         </section>
     
