included some styles

--- a/john-alfred.html
+++ b/john-alfred.html
@@ -1,10 +1,192 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Portfolio</title>
-        <meta charset="UTF-8" />
-    </head>
-    <body>
-        <p>Test</p>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>John Alfred Alfonso's Portfolio</title>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body id="page-top">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+      <a class="navbar-brand" href="#page-top">
+        <span class="d-none d-lg-block"
+          ><img
+            class="img-fluid img-profile rounded-circle mx-auto mb-2"
+            src="assets/john-alfred.jpg"
+            alt="picture of John Alfred Alfonso"
+        /></span>
+      </a>
+
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#interests">Interests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#testimonies">Testimonies</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container-fluid p-0">
+      <!-- About -->
+      <section class="resume-section" id="about">
+        <div class="resume-section-content">
+          <h1 class="mb-0">
+            JOHN ALFRED
+            <span class="text-primary">ALFONSO</span>
+          </h1>
+          <div class="subheading mb-5">
+            PUROK 6A · RAWIS, LEGAZPI CITY, ALBAY · +63 912 3456 789 ·
+            <a href="mailto:name@email.com">johnalfredalfonso12@email.com</a>
+          </div>
+          <p class="lead mb-5">
+            Currently, I'm a student at KodeGo bootcamp to leverage my skills
+            and experience on my chosen career path in the IT industry.
+          </p>
+          <div class="social-icons">
+            <a
+              class="social-icon"
+              href="https://github.com/johnalfred12"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a
+              class="social-icon"
+              href="https://www.facebook.com/john.alfonso.560"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Experience -->
+      <section class="resume-section" id="experience">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Experience</h2>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Student in Web Development</h3>
+              <div class="subheading mb-3">KodeGo Bootcamp</div>
+              <p>
+                Hopefully everything that I will learn from this bootcamp can
+                help me achieve my goals in life.
+              </p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">September 30, 2022 - Present</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Education -->
+      <section class="resume-section" id="education">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Education</h2>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Bicol University</h3>
+              <div class="subheading mb-3">Bachelor of Science</div>
+              <div>Informaton Technology</div>
+              <p>Currently studying</p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">August 2021 - Present</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Skills-->
+      <section class="resume-section" id="skills">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Skills</h2>
+          <div class="subheading mb-3">Programming Languages & Tools</div>
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+            <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+            <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
+          </ul>
+          <div class="subheading mb-3">Workflow</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Kain, school, code, sleep
+            </li>
+          </ul>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Interests-->
+      <section class="resume-section" id="interests">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Interests</h2>
+          <p>
+            Aside from learning web development I also go outside with my
+            friends.
+          </p>
+          <p class="mb-0">
+            Most of the time, I'm really just grinding to learn programming
+            technologies.
+          </p>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Testimonies-->
+      <section class="resume-section" id="testimonies">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Testimonies</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
+              Write your testimonies here
+              <p>-- Write your name here</p>
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
+              Write your testimonies here
+              <p>-- Write your name here</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
