--- a/john-alfred.html
+++ b/john-alfred.html
@@ -63,7 +63,7 @@
             <span class="text-primary">ALFONSO</span>
           </h1>
           <div class="subheading mb-5">
-            PUROK 6A · RAWIS, LEGAZPI CITY, ALBAY · +63 912 3456 789 ·
+            PUROK 6A · RAWIS, LEGAZPI CITY, ALBAY · +63 981 408 4033 ·
             <a href="mailto:name@email.com">johnalfredalfonso12@email.com</a>
           </div>
           <p class="lead mb-5">
@@ -146,7 +146,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Kain, school, code, sleep
+              School -> code -> sleep
             </li>
           </ul>
         </div>
