--- a/Lemuel.html
+++ b/Lemuel.html
@@ -1,56 +1,193 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lemuel_Resume</title>
-    <link href="css/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="assests/img/deep.jpeg"/>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Lemuel Genova</span>
-            <span class="d-none d-lg-block"><img class="img-fluid img-profile fa-js-square mx-auto mb-2" src="assets/img/LEMUEL.jpg" alt="..." /></span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a  href="#about">About</a></li>
-                <li class="nav-item"><a  href="#experience">Experience</a></li>
-                <li class="nav-item"><a  href="#education">Education</a></li>
-                <li class="nav-item"><a  href="#skills">Skills</a></li>
-                <li class="nav-item"><a  href="#interests">Interests</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container-fluid p-0">
-        <!-- About-->
-        <section class="resume-section" id="about">
-            <div class="resume-section-content">
-                <h1 class="mb-0">
-                    Lemuel
-                    <span class="text-danger">Genova</span>
-                </h1>
-                <h6 class="text-danger">Remyeru</h6>
-                <div class="subheading mb-5">
-                    2510 Aurora Street Barangay 124, Pasay · (+63)9512889217 ·
-                    <a href="mailto:lemuelr.72@gmail.com">Lemuelr.72@gmail.com</a>
-                </div>
-                <p class="lead mb-5">Novice in the line of Web Developing but have knowldge, Competence with handling customer since the line of work is handling customer.</p>
-                <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/lemuel-genova-06ab41233/"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/remyeru"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="https://www.facebook.com/lemuel.genova/"><i class="fab fa-facebook-f"></i></a>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Lemuel Genova Porfolio</title>
 
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body id="page-top">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+      <a class="navbar-brand" href="#page-top">
+        <span class="d-none d-lg-block"
+          ><img
+            class="img-fluid img-profile rounded-circle mx-auto mb-2"
+            src="assets/LEMUEL.jpg"
+            alt="image-of-lemuel"
+        /></span>
+      </a>
+
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#interests">Interests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#testimonies">Testimonies</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container-fluid p-0">
+      <!-- About -->
+      <section class="resume-section" id="about">
+        <div class="resume-section-content">
+          <h1 class="mb-0">
+            LEMUEL GENOVA
+            <span class="text-primary">ALFONSO</span>
+          </h1>
+          <div class="subheading mb-5">
+            2510 Aurora Street Barangay 124, Pasay · (+63)9512889217 ·
+            <a href="mailto:name@email.com">lemuelr.72@gmail.com</a>
+          </div>
+          <p class="lead mb-5">
+            Novice in the line of Web Developing but have knowldge, 
+            Competence with handling customer since the line of work is handling customer.
+          </p>
+          <div class="social-icons">
+            <a
+              class="social-icon"
+              href="https://github.com/remyeru"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a
+              class="social-icon"
+              href="https://www.facebook.com/lemuel.genova/"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Experience -->
+      <section class="resume-section" id="experience">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Experience</h2>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Student in Web Development</h3>
+              <div class="subheading mb-3">KodeGo Bootcamp</div>
+              <p>
+                Hopefully everything that I will learn from this bootcamp can
+                help me achieve my goals in life.
+              </p>
             </div>
-        </section>
-    
-</body>
+            <div class="flex-shrink-0">
+              <span class="text-primary">September 30, 2022 - Present</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Education -->
+      <section class="resume-section" id="education">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Education</h2>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
+              <h3 class="mb-0">ACLC Colleges of Meycauayan</h3>
+              <div class="subheading mb-3">Computer Programming</div>
+              <div>Senior High School</div>
+              <p>August 2022</p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">June 2020 - August 2022</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Skills-->
+      <section class="resume-section" id="skills">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Skills</h2>
+          <div class="subheading mb-3">Programming Languages & Tools</div>
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+            <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+            <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
+            <li></li>
+          </ul>
+          <div class="subheading mb-3">Workflow</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Work - Code - Sleep
+            </li>
+          </ul>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Interests-->
+      <section class="resume-section" id="interests">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Interests</h2>
+          <p>
+            Apart from being a web developer, I got most of my time playing online game on PC or phone, 
+            if they would ask what games the genre were RPG, MMORPG, MOBA, and FPS games
+          </p>
+          <p class="mb-0">
+            When and when i'm outdoors well i like to walk while monitor things, 
+            people, animals along the path which i take
+          </p>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Testimonies-->
+      <section class="resume-section" id="testimonies">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Testimonies</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
+              Write your testimonies here
+              <p>-- Write your name here</p>
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
+              Write your testimonies here
+              <p>-- Write your name here</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
