--- a/john-alfred.html
+++ b/john-alfred.html
@@ -181,8 +181,8 @@
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
-              Write your testimonies here
-              <p>-- Write your name here</p>
+              Great buddy, very kind and helpful teammate
+              <p>-- Lemuel Genova</p>
             </li>
           </ul>
         </div>
