--- a/Lemuel.html
+++ b/Lemuel.html
@@ -21,7 +21,7 @@
   </head>
   <body id="page-top">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger" id="sideNav">
       <a class="navbar-brand" href="#page-top">
         <span class="d-none d-lg-block"
           ><img
@@ -59,8 +59,8 @@
       <section class="resume-section" id="about">
         <div class="resume-section-content">
           <h1 class="mb-0">
-            LEMUEL GENOVA
-            <span class="text-primary">ALFONSO</span>
+            LEMUEL 
+            <span class="text-danger">GENOVA</span>
           </h1>
           <div class="subheading mb-5">
             2510 Aurora Street Barangay 124, Pasay · (+63)9512889217 ·
