--- a/john-alfred.html
+++ b/john-alfred.html
@@ -146,7 +146,15 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              School -> code -> sleep
+              Attend school to educate myself
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Learning the things in coding
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Sleep when tired
             </li>
           </ul>
         </div>
