--- a/john-alfred.html
+++ b/john-alfred.html
@@ -150,7 +150,7 @@
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Learning the things in coding
+              Learning to code and watch tutorials
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
