--- a/lemuel.html
+++ b/lemuel.html
@@ -21,7 +21,7 @@
   </head>
   <body id="page-top">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
       <a class="navbar-brand" href="#page-top">
         <span class="d-none d-lg-block"
           ><img
@@ -177,8 +177,8 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
-              Write your testimonies here
-              <p>-- Write your name here</p>
+              He is open to communication, and a good teammate
+              <p>-- John Alfred Alfonso</p>
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
