--- a/jepeh.html
+++ b/jepeh.html
@@ -1,14 +1,189 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>John Paul Ganzan Porfolio</title>
 
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <title></title>
-</head>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
-<body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body id="page-top">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+      <a class="navbar-brand" href="#page-top">
+        <span class="d-none d-lg-block"
+          ><img
+            class="img-fluid img-profile rounded-circle mx-auto mb-2"
+            src="assets/jepeh.jpeg"
+            alt="image-of-lemuel"
+        /></span>
+      </a>
 
-</body>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#interests">Interests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#testimonies">Testimonies</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
+    <!-- Main Content -->
+    <div class="container-fluid p-0">
+      <!-- About -->
+      <section class="resume-section" id="about">
+        <div class="resume-section-content">
+          <h1 class="mb-0">
+            JOHN PAUL 
+            <span class="text-danger">GANZAN</span>
+          </h1>
+          <div class="subheading mb-5">
+            BLOCK 4, PUROK 16, BRGY FATIMA, GENERAL SANTOS CITY · (+63)9916162794 ·
+            <a href="mailto:name@email.com">ganzanjepeh01@gmail.com</a>
+          </div>
+          <p class="lead mb-5">
+            JP here, Im into web-based game development since 2020 using threeJS library. I am passionate in coding and willing to learn more about coding. 
+          </p>
+          <div class="social-icons">
+            <a
+              class="social-icon"
+              href="https://github.com/jepeh"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a
+              class="social-icon"
+              href="https://www.facebook.com/jepehkun"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Experience -->
+      <section class="resume-section" id="experience">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Experience</h2>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Current Web Dev Student</h3>
+              <div class="subheading mb-3">KodeGo Bootcamp</div>
+              <p>
+                I made some web-based games for the last 2 years using threeJS Library, also I made some website for my friends and personal websites for myself. I used NodeJS, NoSQL, Firebase, Heroku and other tech stacks. 
+              </p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">September 30, 2022 - Present</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Education -->
+      <section class="resume-section" id="education">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Education</h2>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
+              <h3 class="mb-0">Fatima National High School</h3>
+              <div class="subheading mb-3">Science, Technology, Engineering and Mathematics</div>
+              <div>Senior High School</div>
+              <p>June 2022</p>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">June 2020 - June 2022</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Skills-->
+      <section class="resume-section" id="skills">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Skills</h2>
+          <div class="subheading mb-3">Javascript, CSS, HTML, THREEJS, GAME LOGIC, PROBLEM SOLVING, GAME ENGINES, NODEJS, GRAPHIC DESIGN, WEB DESIGN, WEB MANAGEMENT, GAME DESIGN AND MORE. </div>
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+            <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+            <li class="list-inline-item"><i class="fab fa-js, "></i></li>
+            <li></li>
+          </ul>
+          <div class="subheading mb-3">Workflow</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Plan - Wireframing - Mobile First - Desktop - Backend 
+            </li>
+          </ul>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Interests-->
+      <section class="resume-section" id="interests">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Interests</h2>
+          <p>
+            I Love making games through coding because it makes me like im making my own world and no one can stop me to do things i really want and the things i want to do even if it's impossible in reality. 
+          </p>
+          <p class="mb-0">
+            I also like Robotics, iOT, electronics and singing, i love cooking and brewing Coffee.
+          </p>
+        </div>
+      </section>
+      <hr class="m-0" />
+
+      <!-- Testimonies-->
+      <section class="resume-section" id="testimonies">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Testimonies</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
+              He is open to communication, and a good teammate
+              <p>-- John Alfred Alfonso</p>
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
+              Write your testimonies here
+              <p>-- Write your name here</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
