added testimony by Alfred

--- a/john-alfred.html
+++ b/john-alfred.html
@@ -146,15 +146,11 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Attend school to educate myself
+              Coding some basic HTML, CSS and Bootstrap website
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Learning to code and watch tutorials
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Sleep when tired
+              Open-minded to learn new IT technologies
             </li>
           </ul>
         </div>
