Small additions on workflow section

--- a/john-alfred.html
+++ b/john-alfred.html
@@ -152,6 +152,10 @@
               <span class="fa-li"><i class="fas fa-check"></i></span>
               Open-minded to learn new IT technologies
             </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              Watching tutorials and understanding interactions about programming
+            </li>
           </ul>
         </div>
       </section>
