--- a/jepeh.html
+++ b/jepeh.html
@@ -173,7 +173,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
-              He is open to communication, and a good teammate
+             He is willing to help others who need help with their code.
               <p>-- John Alfred Alfonso</p>
             </li>
             <li>
