Testimony for Alfred

--- a/john-alfred.html
+++ b/john-alfred.html
@@ -184,8 +184,8 @@
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
-              Write your testimonies here
-              <p>-- Write your name here</p>
+               Looks Kind and will help you grow with passion. 
+              <p>-- John Paul Ganzan</p>
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
