--- a/jepeh.html
+++ b/jepeh.html
@@ -178,8 +178,8 @@
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-comment-dots"></i></span>
-              Write your testimonies here
-              <p>-- Write your name here</p>
+              Great teammate thta is willing to help and share knowledge
+              <p>-- Lemuel Genova</p>
             </li>
           </ul>
         </div>
